# server

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  docker-compose.yml  pyproject.toml
api/: Dockerfile  alembic.ini  pyproject.toml  railway.toml
api/app/: config.py  database.py  dependencies.py  main.py
api/app/data/: README.md
api/app/middleware/: body_limit.py  logging_middleware.py
api/app/models/: __init__.py  consolidation_run.py  invitation.py  retrieval_log.py  rif_shadow.py  savings_ledger.py  search_miss.py  tag_trend.py  trace.py  trace_relationship.py  trigger_stats.py  user.py
api/app/routers/: admin.py  amendments.py  analytics.py  auth.py  invitations.py  moderation.py  search.py  tags.py  telemetry.py  traces.py  votes.py
api/app/schemas/: auth.py  invitation.py  savings.py  search.py  trace.py  vote.py
api/app/services/: activation.py  context.py  contradiction.py  convergence.py  decay.py  diversity.py  enrichment.py  geoip.py  health.py  maturity.py  outbound_impact.py  pattern_synthesis.py  retrieval.py  rif.py  temperature.py  trends.py  trust.py
api/app/worker/: consolidation_worker.py  embedding_worker.py
api/fixtures/: seed_fixtures.py  seed_traces.json
api/migrations/: env.py
api/migrations/versions/: 0004_retrieval_and_encoding.py  0005_relationships_and_consolidation.py  (+18 more)
api/scripts/: generate_capacity_data.py
api/tests/: conftest.py  test_admin_token_gate.py  test_analytics_savings.py  test_asyncio_mode_enabled.py  test_conftest_fakes.py  test_geoip.py  test_health.py  test_knowledge_health.py  test_migration_0023_savings_ledger.py  test_outbound_impact.py  test_retrieval_floor_config.py  test_savings_ledger_model.py  test_serialize_trace.py  test_somatic_floor.py  test_telemetry_savings.py  test_trace_tokens_to_resolution.py
ops/: .secrets.env.example  Dockerfile  pyproject.toml  railway.audit.toml  railway.review.toml
ops/scripts/: set-secrets.sh
ops/tests/: conftest.py  test_alerting.py  test_config.py  test_contrib_review.py  test_db.py  test_discord.py  test_emailer.py  test_github.py  test_llm.py  test_oss_audit.py  test_render.py
(+151 files in other folders)
