[project]
name = "commontrace-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "asyncpg>=0.31.0",
    "alembic>=1.18.0",
    "pgvector>=0.4.2",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv",
    "structlog",
    "redis>=5.0",
    "detect-secrets>=1.5.0",
    "packaging>=23.0",
    "httpx>=0.27",
    "openai>=1.0",
    "sentence-transformers>=3.0",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "factory-boy",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
