[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commontrace-ops"
version = "0.1.0"
description = "CommonTrace scheduled ops: OSS-health audit + contribution review"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "openai>=1.0",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/commontrace_ops"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
